fix(components/chips): out of bounds bug #0

--- a/libs/components/src/lib/components/chips/chips-item/chips-item.component.less
+++ b/libs/components/src/lib/components/chips/chips-item/chips-item.component.less
@@ -14,8 +14,17 @@ button {
   }
 }
 
+:host-context(.deletable) {
+  .chips-list__item:not(:disabled) {
+    &:hover,
+    &:focus-visible {
+      outline: var(--prizm-background-stroke-focus) 1px solid;
+    }
+  }
+}
+
 .chips-list__item {
-  height: var(--prizm-chips-item-heigh, 24px);
+  height: var(--prizm-chips-item-height, 24px);
   min-width: 4px;
   max-width: 100%;
   padding: 4px;
@@ -30,13 +39,6 @@ button {
   color: var(--prizm-chips-item-color, var(--prizm-status-none-primary-default));
 
   cursor: pointer;
-
-  &:not(:disabled) {
-    &:hover,
-    &:focus-visible {
-      outline: var(--prizm-background-stroke-focus) 1px solid;
-    }
-  }
 
   .chips-name {
     white-space: nowrap;
