--- a/libs/components/src/lib/components/chips/chips.component.less
+++ b/libs/components/src/lib/components/chips/chips.component.less
@@ -35,10 +35,15 @@
     }
 
     &.hidden {
-      height: var(--prizm-chips-item-heigh, 24px);
+      height: var(--prizm-chips-item-height, 24px);
       width: 100%;
       max-width: calc(100% - 16px);
       flex-wrap: nowrap;
     }
   }
+}
+
+// set last position (after all chips)
+.more-item {
+  order: 9999;
 }
