--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -1,7 +1,7 @@
 <prizm-dropdown-host
   #dropdownHostRef
   [content]="dropdown"
-  [isOpen]="(opened$ | async)!"
+  [isOpen]="$any(opened$ | async)"
   [prizmDropdownHost]="layoutComponent?.el?.nativeElement"
   [prizmDropdownHostWidth]="dropdownWidth"
   [prizmDropdownMinHeight]="minDropdownHeight"
@@ -10,8 +10,11 @@
   [dropdownStyles]="dropdownStyles"
   [dropdownClasses]="dropdownClasses"
   [ngSwitch]="layoutComponent?.outer"
+  [dropdownTriggerElement]="layoutComponent?.el?.nativeElement"
+  [dropdownDisabled]="disabled"
   [prizmFocusable]="true"
-  (isOpenChange)="$event && searchInputControl.setValue(''); opened$$.next($event)"
+  (isOpenChange)="changeParentFocusedClass($event); $event && searchInputControl.setValue('')"
+  dropdownTrigger="click"
 >
   <input
     #focusableElementRef
@@ -80,7 +83,7 @@
                       checked: item.checked,
                       stringify: item | prizmCallFunc : stringify
                     }
-                  } as context
+                  }
                 "
               >
                 {{ text }}
@@ -111,8 +114,7 @@
       [class.icon-dropdown]="iconName === defaultIcon"
       [name]="$any(iconName)"
       [class.disabled]="disabled"
-      [prizmFocusable]="true"
-      (click)="safeOpenModal()"
+      [prizmFocusable]="!disabled"
     >
     </prizm-icons-full>
   </ng-container>
