--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.less
@@ -61,7 +61,7 @@
   background: var(--prizm-select-item-background, var(--prizm-bg-body));
   font-weight: var(--prizm-select-item-font-weight, 400);
   font-size: var(--prizm-select-item-font-size, 14px);
-  color: var(--prizm-select-empty-text, var(--prizm-text-subscript, #20222b));
+  color: var(--prizm-select-empty-text, var(--prizm-text-icon-secondary));
 }
 
 .icon-dropdown {
@@ -105,4 +105,8 @@ prizm-icon {
 
 prizm-dropdown-host {
   display: flex;
+}
+
+:host .input-search {
+  cursor: inherit;
 }
