fix(components/input-layout): disabled on focus #0

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -3,6 +3,10 @@
   position: relative;
   width: var(--prizm-input-layout-width, 100%);
 
+  &.is-clickable {
+    cursor: pointer;
+  }
+
   .prizm-input-form-status-button,
   .prizm-input-button-default {
     flex-shrink: 0;
@@ -16,10 +20,12 @@
     display: none;
   }
 
-  &:hover,
-  &:focus-within {
-    .prizm-input-button-default {
-      display: flex;
+  &:not(.disabled) {
+    &:hover,
+    &:focus-within {
+      .prizm-input-button-default {
+        display: flex;
+      }
     }
   }
 }
@@ -180,8 +186,8 @@
   }
 
   // rewrite all if focused
-  &-focused,
-  &:focus-within {
+  &-focused:not(.prizm-input-form-disabled),
+  &:focus-within:not(.prizm-input-form-disabled) {
     border-color: var(--prizm-form-active);
     box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
     position: relative;
