feat(doc/navigation): add local storag to example for state saving #1838

--- a/apps/doc/src/app/components/navigation/examples/navigation-basic-example/navigation-basic-example.component.html
+++ b/apps/doc/src/app/components/navigation/examples/navigation-basic-example/navigation-basic-example.component.html
@@ -42,6 +42,7 @@
         [data]="data"
         [activeElement]="activeElement ?? data[parentActiveIdx]"
         (activeItemChange)="saveActiveIdx($any($event))"
+        (expandedItemsChange)="saveNavigationState($any($event))"
       ></prizm-navigation>
     </prizm-scrollbar>
 
