fix(components/tabs): autoscroll to selected tab in dropdown added #1962

--- a/libs/components/src/lib/components/tabs/tabs.component.html
+++ b/libs/components/src/lib/components/tabs/tabs.component.html
@@ -68,6 +68,7 @@
             <prizm-listing-item
               [disabled]="$any(tab.disabled)"
               [selected]="activeTabIndex === i"
+              [prizmScrollIntoView]="scrollItemIntoView(i)"
               (click)="clickTab(i)"
             >
               <ng-container *ngIf="tab.icon || hasIcons" leftBox>
