fix(components/input): correction input hint behavior for input without ng-control #1966

--- a/apps/doc/src/app/components/input/input-text/examples/input-basic-example/input-basic-example.component.html
+++ b/apps/doc/src/app/components/input/input-text/examples/input-basic-example/input-basic-example.component.html
@@ -1,3 +1,3 @@
 <prizm-input-layout label="Заголовок">
-  <input prizmInput />
+  <input [prizmHintCanShow]="true" prizmInput />
 </prizm-input-layout>
