--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="host" [prizmTheme]="theme" prizmFocusTrap>
-  <div class="content">
+  <div class="content" [class.has-description]="!!context.description">
     <div
       class="title prizm-font-title-h4"
       #host
