--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.less
@@ -74,8 +74,11 @@
 .content {
   display: flex;
   flex-flow: column;
-  gap: 16px;
   padding: 32px 16px;
+
+  &.has-description {
+    gap: 16px;
+  }
 }
 
 .footer {
