--- a/libs/components/src/lib/components/internal/primitive-time-pagination/primitive-time-pagination.component.less
+++ b/libs/components/src/lib/components/internal/primitive-time-pagination/primitive-time-pagination.component.less
@@ -6,16 +6,22 @@
   .box {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     border-bottom: 1px solid var(--prizm-background-stroke);
     height: 48px;
+    padding: 4px 0;
   }
 
   .pagination-btn {
     .pagination-btn();
+    height: 40px;
+    width: 40px;
+    align-items: center;
+    justify-content: center;
   }
 
-  .hidden {
-    visibility: hidden;
+  .time-separator {
+    width: 4px;
+    margin: auto 8px;
   }
 }
