--- a/libs/components/src/lib/components/internal/primitive-time-picker/primitive-time-picker.component.less
+++ b/libs/components/src/lib/components/internal/primitive-time-picker/primitive-time-picker.component.less
@@ -10,6 +10,12 @@
   .footer:not(:empty) {
     margin-top: 8px;
   }
+
+  .grid {
+    height: 192px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
 
 .z-item {
