--- a/libs/components/src/lib/components/internal/primitive-time-pagination/primitive-time-pagination.component.html
+++ b/libs/components/src/lib/components/internal/primitive-time-pagination/primitive-time-pagination.component.html
@@ -2,32 +2,35 @@
   @if (dictionary$ | async; as dictionary) {
   <button
     class="pagination-btn"
-    [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
+    [attr.testId]="'prizm-primitive-time-pagination__hours-button'"
     [class.active]="hoursActive"
     [prizmFocusable]="true"
+    (click)="updateActiveMode(hoursCount)"
     type="button"
   >
-    {{ dictionary.hours }}
+    {{ (value?.hours | prizmTimeWithZero) ?? dictionary.hours }}
   </button>
-  :
+  <div class="time-separator">:</div>
   <button
     class="pagination-btn"
-    [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
+    [attr.testId]="'prizm-primitive-time-pagination__minutes-button'"
     [class.active]="minutesActive"
     [prizmFocusable]="true"
+    (click)="updateActiveMode(minutesAndSecondsCount)"
     type="button"
   >
-    {{ dictionary.minutes }}
+    {{ (value?.minutes | prizmTimeWithZero) ?? dictionary.minutes }}
   </button>
-  :
+  <div class="time-separator">:</div>
   <button
     class="pagination-btn"
-    [attr.testId]="'prizm-primitive-year-month-pagination__year-button'"
+    [attr.testId]="'prizm-primitive-time-pagination__seconds-button'"
     [class.active]="secondsActive"
     [prizmFocusable]="true"
+    (click)="updateActiveMode(minutesAndSecondsCount)"
     type="button"
   >
-    {{ dictionary.seconds }}
+    {{ (value?.seconds | prizmTimeWithZero) ?? dictionary.seconds }}
   </button>
   }
 </div>
