--- a/libs/components/src/lib/components/internal/primitive-time-picker/primitive-time-picker.component.html
+++ b/libs/components/src/lib/components/internal/primitive-time-picker/primitive-time-picker.component.html
@@ -1,7 +1,27 @@
 <div class="header">
   <ng-content select="[header]"></ng-content>
 </div>
-<div *prizmLet="month | prizmCalendarSheet : true as sheet">
+
+<div class="grid">
+  <div
+    class="z-cell"
+    *ngFor="let item of timeSheet"
+    [attr.data-state]="getItemState(item)"
+    (prizmHoveredChange)="onItemHovered($event && item)"
+    (prizmPressedChange)="onItemPressed($event && item)"
+    (click)="onItemClick(item)"
+  >
+    <div
+      class="z-item prizm-font-btn-links-14"
+      [class.z-item_unavailable]="itemIsUnavailable(item)"
+      [class.z-item_weekend]="item.isWeekend"
+    >
+      {{ item.key }}
+    </div>
+  </div>
+</div>
+
+<!-- <div *prizmLet="month | prizmCalendarSheet : true as sheet">
   <div
     class="z-row"
     *prizmRepeatTimes="let rowIndex of sheet.length"
@@ -32,7 +52,4 @@
       </ng-container>
     </ng-container>
   </div>
-</div>
-<div class="footer">
-  <ng-content select="[footer]"></ng-content>
-</div>
+</div> -->
