feat(components/time-picker): time picker in progress #2103

--- a/apps/doc/src/app/components/time-picker/examples/time-picker-basic-example/time-picker-basic-example.component.html
+++ b/apps/doc/src/app/components/time-picker/examples/time-picker-basic-example/time-picker-basic-example.component.html
@@ -1,1 +1,6 @@
-<prizm-time-picker></prizm-time-picker>
+<prizm-time-picker (timeChanged)="timeChanged($event)"></prizm-time-picker>
+
+<br />
+<br />
+
+{{ time | json }}
