--- a/libs/components/src/lib/components/internal/primitive-time-picker/primitive-time-picker.component.html
+++ b/libs/components/src/lib/components/internal/primitive-time-picker/primitive-time-picker.component.html
@@ -13,7 +13,7 @@
     (prizmPressedChange)="onItemPressed($event && item)"
     (click)="onItemClick(item.value)"
   >
-    <div class="z-item prizm-font-btn-links-14" [class.z-item_unavailable]="itemIsUnavailable(item)">
+    <div class="z-item prizm-font-btn-links-14">
       {{ item.key }}
     </div>
   </div>
