--- a/libs/components/src/lib/components/time-picker/time-picker.component.html
+++ b/libs/components/src/lib/components/time-picker/time-picker.component.html
@@ -1,19 +1,25 @@
 <div class="" picker-host>
-  @let time = internalTime(); @let mode = timeSheetMode();
+  @let time = internalTime(); @let sheetState = timeSheetState(); @let timeSheet = sheetState |
+  prizmTimeSheet;
   <prizm-primitive-time-pagination
     [value]="time"
-    [activeMode]="mode"
-    (actvieModeChange)="timeSheetMode.set($event)"
+    [timeMode]="timeMode()"
+    [activeMode]="sheetState"
+    (actvieModeChange)="timeSheetState.set($event)"
   ></prizm-primitive-time-pagination>
 
   <prizm-scrollbar class="z-scrollbar">
     <prizm-primitive-time-picker
-      [timeSheet]="mode | prizmTimeSheet"
-      [selectedItem]="time[mode]"
+      [timeSheet]="timeSheet"
+      [disabledItems]="timeSheet | prizmTimeDisabledItems : sheetState : time : minTime() : maxTime()"
+      [selectedItem]="time[sheetState]"
       (timeClick)="timeClicked($event)"
     ></prizm-primitive-time-picker>
   </prizm-scrollbar>
 </div>
+<!-- 
+      [disabledItemHandler]="disabledItemHandler() | prizmMapper : disabledItemHandlerMapper : minTime() : maxTime()"
+-->
 
 <div class="footer">
   @let dictionary = dictionary$ | async;
@@ -21,7 +27,7 @@
     {{ dictionary?.cancelButton }}
   </button>
   <button
-    [disabled]="time | prizmPikcerDisable"
+    [disabled]="time | prizmPickerDisable"
     (click)="setValue()"
     appearance="primary"
     appearanceType="fill"
