refactor(components/time-picker): fix live demo types #2103

--- a/apps/doc/src/app/components/time-picker/time-picker-example.component.html
+++ b/apps/doc/src/app/components/time-picker/time-picker-example.component.html
@@ -22,7 +22,7 @@
         [(documentationPropertyValue)]="timeMode"
         [documentationPropertyValues]="timeModeVariants"
         documentationPropertyName="timeMode"
-        documentationPropertyType="'hour' | 'minute' | 'second'"
+        documentationPropertyType="'HH:MM:SS' | 'HH:MM'"
         documentationPropertyMode="input"
       >
         timeMode
