feat(components/table): styles adaptation for input layout in td #276

--- a/apps/doc/src/app/components/table/table-example.component.html
+++ b/apps/doc/src/app/components/table/table-example.component.html
@@ -117,6 +117,15 @@
     </prizm-doc-example>
 
     <prizm-doc-example
+      id="editableLayouts"
+      [stackblitzVersions]="null"
+      [content]="exampleEditableLayoutsTable"
+      heading="Editable row with input layouts"
+    >
+      <prizm-table-editable-layouts-example></prizm-table-editable-layouts-example>
+    </prizm-doc-example>
+
+    <prizm-doc-example
       id="editableRow"
       [stackblitzVersions]="null"
       [content]="exampleEditableRowTable"
