--- a/libs/components/src/lib/components/table/td/td.component.less
+++ b/libs/components/src/lib/components/table/td/td.component.less
@@ -71,6 +71,10 @@
       box-shadow: 0 0 0 1px var(--prizm-status-alarm-primary-default) inset;
     }
   }
+
+  & > .prizm-input-layout {
+    width: 100%;
+  }
 }
 
 :host-context([active='true']) {
