--- a/libs/components/src/lib/components/input/common/input-layout/input-layout-inserted.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout-inserted.component.less
@@ -35,4 +35,18 @@
       flex-shrink: 1;
     }
   }
+
+  .prizm-input-button-default {
+    display: flex;
+    visibility: hidden;
+  }
+
+  &:not(.disabled) {
+    &:hover,
+    &:focus-within {
+      .prizm-input-button-default {
+        visibility: visible;
+      }
+    }
+  }
 }
