feat(doc/time-picker): add min max example #2103

--- a/apps/doc/src/app/components/time-picker/time-picker-example.component.html
+++ b/apps/doc/src/app/components/time-picker/time-picker-example.component.html
@@ -4,6 +4,10 @@
     <prizm-doc-example id="base" [content]="exampleBasicTimePicker" heading="Base">
       <prizm-time-picker-basic-example></prizm-time-picker-basic-example>
     </prizm-doc-example>
+
+    <prizm-doc-example id="minMax" [content]="exampleMinMaxTimePicker" heading="Min and Max time">
+      <prizm-time-picker-min-max-example></prizm-time-picker-min-max-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
