fix(components/chips): add hint can show property to input chips #1966

--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -67,6 +67,7 @@
               [chips]="chips"
               [deletable]="deletable"
               [disabled]="disabled"
+              [hintCanShow]="hintCanShow"
               prizmDocHostElementKey="PrizmChipsComponent"
               prizm-input-bottom
             >
