feat(doc/time-picker): add initial time to example #2103

--- a/apps/doc/src/app/components/time-picker/examples/time-picker-basic-example/time-picker-basic-example.component.html
+++ b/apps/doc/src/app/components/time-picker/examples/time-picker-basic-example/time-picker-basic-example.component.html
@@ -1,4 +1,8 @@
-<prizm-time-picker (timeChanged)="timeChanged($event)" (canceled)="canceled()"></prizm-time-picker>
+<prizm-time-picker
+  [time]="$any(time)"
+  (timeChanged)="timeChanged($event)"
+  (canceled)="canceled()"
+></prizm-time-picker>
 
 <br />
 <br />
