--- a/apps/doc/src/app/components/time-picker/examples/time-picker-min-max-example/time-picker-min-max-example.component.html
+++ b/apps/doc/src/app/components/time-picker/examples/time-picker-min-max-example/time-picker-min-max-example.component.html
@@ -7,10 +7,12 @@
 
 <br />
 <br />
-<pre>
-    {{ 'time: ' + time | json }}
 
-    {{ 'minTime: ' + minTime | json }}
+time: {{ time | json }}
+<br />
 
-    {{ 'maxTime: ' + maxTime | json }}
-</pre>
+minTime {{ minTime | json }}
+
+<br />
+
+maxTime {{ maxTime | json }}
