fix(components/combobox): fixed review bugs #0

--- a/libs/components/src/lib/components/dropdowns/combobox/combobox-item.component.html
+++ b/libs/components/src/lib/components/dropdowns/combobox/combobox-item.component.html
@@ -15,10 +15,9 @@
     <span
       class="text"
       #elem
-      [prizmHint]="text!"
-      [prizmHintHost]="hostHint"
+      [prizmHintOnOverflow]="text!"
+      [prizmHintOnOverflowEl]="hostHint"
       [prizmHintDirection]="parent.direction"
-      [prizmHintCanShow]="$any(elem | prizmCallFunc : parent.prizmIsTextOverflow$ | async)"
     >
       <ng-container
         *polymorphOutlet="
