feat(doc/combobox): added auto reposition input #0

--- a/apps/doc/src/app/components/input/combobox/examples/with-list-item-template/combobox-with-list-item-template-example.component.html
+++ b/apps/doc/src/app/components/input/combobox/examples/with-list-item-template/combobox-with-list-item-template-example.component.html
@@ -4,6 +4,7 @@
     [valueTemplate]="valueTemplate"
     [listItemTemplate]="listItemTemplate"
     [formControl]="control"
+    [dropdownAutoReposition]="true"
     searchMatcher
   ></prizm-combobox>
 </prizm-input-layout>
