--- a/apps/doc/src/app/components/input/input-select/examples/with-list-item-template/select-with-list-item-template-example.component.html
+++ b/apps/doc/src/app/components/input/input-select/examples/with-list-item-template/select-with-list-item-template-example.component.html
@@ -4,6 +4,7 @@
     [valueTemplate]="valueTemplate"
     [listItemTemplate]="listItemTemplate"
     [formControl]="control"
+    [dropdownAutoReposition]="true"
   ></prizm-input-select>
 </prizm-input-layout>
 
