fix(components/combobox): showed text with value template #0

--- a/apps/doc/src/app/components/input/combobox/examples/with-list-item-template/combobox-with-list-item-template-example.component.html
+++ b/apps/doc/src/app/components/input/combobox/examples/with-list-item-template/combobox-with-list-item-template-example.component.html
@@ -9,12 +9,12 @@
   ></prizm-combobox>
 </prizm-input-layout>
 
-<ng-template #valueTemplate let-value let-nullContent="nullContent">
+<ng-template #valueTemplate let-userText="userText" let-value let-nullContent="nullContent">
   <div class="item" *ngIf="value; else empty">
     <b [style.color]="getColor(value)">{{ value }}</b>
   </div>
   <ng-template #empty>
-    {{ nullContent }}
+    {{ userText || nullContent }}
   </ng-template>
 </ng-template>
 
