--- a/libs/components/src/lib/components/dropdowns/combobox/combobox.component.html
+++ b/libs/components/src/lib/components/dropdowns/combobox/combobox.component.html
@@ -90,7 +90,7 @@
           </ng-container>
         </ng-container>
         <ng-template #placeholderTemplate>
-          <div class="placeholder">{{ placeholder }}</div>
+          <div class="placeholder">{{ userText || placeholder }}</div>
         </ng-template>
       </div>
     </ng-template>
